--- a/home/index.html
+++ b/home/index.html
@@ -5,6 +5,9 @@
 <!-- Mirrored from www.nishantverma.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 29 Sep 2020 13:54:33 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+
+
+	<meta name="p:domain_verify" content="a9e6711e7abf078f688b14e965e12f23"/>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
