update major all home location pages

--- a/home/apply-now/index.html
+++ b/home/apply-now/index.html
@@ -174,7 +174,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div role="navigation" class="style-plain nav-menu-primary"
 			aria-label="Primary Menu">
 
-		<ul id="nv-primary-navigation-main" class="primary-menu-ul"><li id="menu-item-1645" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="../index.html">Home</a></li>
+		<ul id="nv-primary-navigation-main" class="primary-menu-ul"><li id="menu-item-1645" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="https://nishantverma.io">Home</a></li>
 <li id="menu-item-1646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1646"><a href="../about/index.html">About</a></li>
 <li id="menu-item-1647" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1647"><a href="../training/index.html">Training</a></li>
 </ul>	</div>
@@ -252,7 +252,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div role="navigation" class="style-plain nav-menu-primary"
 			aria-label="Primary Menu">
 
-		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="../index.html">Home</a></li>
+		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="https://nishantverma.io">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1646"><a href="../about/index.html">About</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1647"><a href="../training/index.html">Training</a></li>
 </ul>	</div>
@@ -283,7 +283,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="fl-module fl-module-rich-text fl-node-5e9ee2abb3c75" data-node="5e9ee2abb3c75">
 	<div class="fl-module-content fl-node-content">
 		<div class="fl-rich-text">
-	<h1 style="text-align: center;"><strong>Book Your Private Marketing Consult With Nishant Verma</strong></h1>
+	<h1 style="text-align: center;"><strong>Book Your Private Marketing Consultation With Nishant Verma</strong></h1>
 </div>
 	</div>
 </div>
