--- a/home/training/index.html
+++ b/home/training/index.html
@@ -176,7 +176,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div role="navigation" class="style-plain nav-menu-primary"
 			aria-label="Primary Menu">
 
-		<ul id="nv-primary-navigation-main" class="primary-menu-ul"><li id="menu-item-1645" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="../index.html">Home</a></li>
+		<ul id="nv-primary-navigation-main" class="primary-menu-ul"><li id="menu-item-1645" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="https://nishantverma.io">Home</a></li>
 <li id="menu-item-1646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1646"><a href="../about/index.html">About</a></li>
 <li id="menu-item-1647" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1613 current_page_item menu-item-1647"><a href="index.html" aria-current="page">Training</a></li>
 </ul>	</div>
@@ -254,7 +254,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div role="navigation" class="style-plain nav-menu-primary"
 			aria-label="Primary Menu">
 
-		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="../index.html">Home</a></li>
+		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="https://nishantverma.io">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1646"><a href="../about/index.html">About</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1613 current_page_item menu-item-1647"><a href="index.html" aria-current="page">Training</a></li>
 </ul>	</div>
@@ -285,14 +285,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="fl-module fl-module-rich-text fl-node-5e9edff6bb4b4" data-node="5e9edff6bb4b4">
 	<div class="fl-module-content fl-node-content">
 		<div class="fl-rich-text">
-	<p style="text-align: center; color: #0e59da;"><strong>100% FREE TRAINING</strong></p>
+	<p style="text-align: center; color: #0e59da;"><strong></strong></p>
 </div>
 	</div>
 </div>
 <div class="fl-module fl-module-rich-text fl-node-5e9ee01dc4f1b" data-node="5e9ee01dc4f1b">
 	<div class="fl-module-content fl-node-content">
 		<div class="fl-rich-text">
-	<h1>How to grow a wildly profitable restaurants business and get large customers footfalls without relying on food platforms, cold calling, begging for clients, or relying on referrals.</h1>
+	<h1><p text align="center">"How to Grow a Restaurant Business".</h1></p>
+
+	<h4>
+	<p text align="center">How to grow a wildly profitable restaurants business and get large customers footfalls without relying on food platforms, hope, or relying on referrals.</p></h4>
+
+</p>
 </div>
 	</div>
 </div>
@@ -316,7 +321,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="fl-module fl-module-rich-text fl-node-5e9ee08f579ba" data-node="5e9ee08f579ba">
 	<div class="fl-module-content fl-node-content">
 		<div class="fl-rich-text">
-	<p><strong>EXCLUSIVE FREE TRAINING WITH NISHANT VERMA<br />
+	<p><strong>EXCLUSIVE FREE CASE STUDY WITH NISHANT VERMA<br />
 </strong></p>
 <p>&nbsp;</p>
 <p><strong>Reason #1 -</strong> The big opportunity to start / grow your own Restaurant business is HERE!</p>
