--- a/home/about/index.html
+++ b/home/about/index.html
@@ -167,7 +167,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div role="navigation" class="style-plain nav-menu-primary"
 			aria-label="Primary Menu">
 
-		<ul id="nv-primary-navigation-main" class="primary-menu-ul"><li id="menu-item-1645" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="../index.html">Home</a></li>
+		<ul id="nv-primary-navigation-main" class="primary-menu-ul"><li id="menu-item-1645" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="https://nishantverma.io">Home</a></li>
 <li id="menu-item-1646" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1637 current_page_item menu-item-1646"><a href="index.html" aria-current="page">About</a></li>
 <li id="menu-item-1647" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1647"><a href="../training/index.html">Training</a></li>
 </ul>	</div>
@@ -245,7 +245,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div role="navigation" class="style-plain nav-menu-primary"
 			aria-label="Primary Menu">
 
-		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="../index.html">Home</a></li>
+		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1645"><a href="https://nishantverma.io">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1637 current_page_item menu-item-1646"><a href="index.html" aria-current="page">About</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1647"><a href="../training/index.html">Training</a></li>
 </ul>	</div>
