--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div id="col-full-175" class="col-md-12 innerContent col_left" data-col="full" data-trigger="none" data-animate="fade" data-delay="500" data-title="1st column" style="outline: none;">
 <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin" style="padding: 0 10px">
 <div class="de elImageWrapper de-image-block elAlign_center elMargin0 ui-droppable de-editable" id="tmp_image-29893" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 0px; outline: none; cursor: pointer;" aria-disabled="false">
-<a href="https://imgbb.com/"><img src="https://i.ibb.co/rFJx0KR/logo.png" alt="logo" width="100" ="100"></a>"
+<a href="https://nishantverma.io"><img src="https://i.ibb.co/rFJx0KR/logo.png" alt="logo" width="100" ="100"></a>"
 </div>
 </div>
 </div>
