--- a/home/onboarding-3/nishantverma.io/onboarding-3/index.html
+++ b/home/onboarding-3/nishantverma.io/onboarding-3/index.html
@@ -258,7 +258,7 @@ img.emoji {
 	<div class="fl-module-content fl-node-content">
 		<div class="fl-html">
 	<div style="text-align: center;width:60%;margin:0 auto;">
-    <a href="https://nishantverma.io/home/onboarding-4/" style = "text-decoration:none;">
+    <a href="https://nishantverma.io/home/onboarding-4/nishantverma.io/onboarding-4/index.html" style = "text-decoration:none;">
    <button class="btn btn-primary btn-block"><h6 style = "font-size:18px;margin-top:10px;">Take me to the next step >></h6></button>
     </a>
 </div>
