--- a/home/onboarding/nishantverma.io/onboarding/index.html
+++ b/home/onboarding/nishantverma.io/onboarding/index.html
@@ -245,7 +245,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="fl-module-content fl-node-content">
 		<div class="fl-html">
 	<div style="text-align: center;width:60%;margin:0 auto;">
-    <a href="http://nishantverma.io/home/onboarding-2/" style = "text-decoration:none;">
+    <a href="https://nishantverma.io/home/onboarding-2/nishantverma.io/onboarding-2/index.html" style = "text-decoration:none;">
    <button class="btn btn-primary btn-block"><h6 style = "font-size:18px;margin-top:10px;">Take me to the next step >></h6></button>
     </a>
 </div>
