updated 1st onboarding file

--- a/home/onboarding/nishantverma.io/onboarding/index.html
+++ b/home/onboarding/nishantverma.io/onboarding/index.html
@@ -190,20 +190,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			aria-label="Primary Menu">
 
 		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul nav-ul"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-2054"><a href="https://nishantverma.io/">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-119"><a href="https://nishantverma.io/training/">Training</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2024"><a href="https://www.uability.in/uability-reviews/">Reviews</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-120"><a href="https://nishantverma.io/uability/">UAbility</a></li>
-<li class="menu-item-nav-search minimal" id="nv-menu-item-search-2" tabindex="0" aria-label="search"><a href="#" class="nv-nav-search-icon" ><div class="nv-icon nv-search" >
-				<svg width="15" height="15" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1216 832q0-185-131.5-316.5t-316.5-131.5-316.5 131.5-131.5 316.5 131.5 316.5 316.5 131.5 316.5-131.5 131.5-316.5zm512 832q0 52-38 90t-90 38q-54 0-90-38l-343-342q-179 124-399 124-143 0-273.5-55.5t-225-150-150-225-55.5-273.5 55.5-273.5 150-225 225-150 273.5-55.5 273.5 55.5 225 150 150 225 55.5 273.5q0 220-124 399l343 343q37 37 37 90z"/></svg>
-			</div></a><div class="nv-nav-search"><form role="search" method="get" class="search-form" action="https://nishantverma.io/">
-				<label>
-					<span class="screen-reader-text">Search for:</span>
-					<input type="search" class="search-field" placeholder="Search &hellip;" value="" name="s" />
-				</label>
-				<input type="submit" class="search-submit" value="Search" />
-			<div class="nv-search-icon-wrap"><div class="nv-icon nv-search" >
-				<svg width="15" height="15" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1216 832q0-185-131.5-316.5t-316.5-131.5-316.5 131.5-131.5 316.5 131.5 316.5 316.5 131.5 316.5-131.5 131.5-316.5zm512 832q0 52-38 90t-90 38q-54 0-90-38l-343-342q-179 124-399 124-143 0-273.5-55.5t-225-150-150-225-55.5-273.5 55.5-273.5 150-225 225-150 273.5-55.5 273.5 55.5 225 150 150 225 55.5 273.5q0 220-124 399l343 343q37 37 37 90z"/></svg>
-			</div></div></form></div></li></ul>	</div>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-119"><a href="https://nishantverma.io/home/training">Training</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2024"><a href="https://nishantverma.io/home/about">About</a></li>
+
+				
 </div>
 
 	</div>
