update internal links and logo url

--- a/home/onboarding-2/nishantverma.io/onboarding-2/index.html
+++ b/home/onboarding-2/nishantverma.io/onboarding-2/index.html
@@ -132,7 +132,7 @@ img.emoji {
 		data-item-id="logo">
 	<div class="site-logo">
 	<a class="brand" href="nishantverma.io" title="Nishant Verma"
-			aria-label="Nishant Verma"><img src="https://www.w3schools.com/images/lamp.jpg" alt=""></a></div>
+			aria-label="Nishant Verma"><img src="https://i.ibb.co/1Kh6G1j/logo.png" alt=""></a></div>
 
 	</div>
 
